--- a/configuration/global-config.yaml
+++ b/configuration/global-config.yaml
@@ -1,13 +1,16 @@
 homeRegion: &HOME_REGION us-east-1
 enabledRegions:
   - *HOME_REGION
+  - us-east-2
+  - us-west-1
+  - us-west-2
 managementAccountAccessRole: AWSControlTowerExecution
 cloudwatchLogRetentionInDays: 3653
 terminationProtection: true
 cdkOptions:
   centralizeBuckets: true
   useManagementAccessRole: true
-# snsTopics:
+# snsTopics: ### SNS Topics are redundant when we already have Splunk Alerting
 #   deploymentTargets:
 #     organizationalUnits:
 #       - Root
@@ -23,22 +26,22 @@ controlTower:
       loggingBucketRetentionDays: 365
       accessLoggingBucketRetentionDays: 3650
       organizationTrail: true
-    security:
-      enableIdentityCenterAccess: true
-logging:
-  account: LogArchive
-  cloudtrail:
-    enable: false
-    organizationTrail: false
-    organizationTrailSettings:
-      multiRegionTrail: true
-      globalServiceEvents: true
-      managementEvents: true
-      s3DataEvents: true
-      lambdaDataEvents: true
-      sendToCloudWatchLogs: true
-      apiErrorRateInsight: false
-      apiCallRateInsight: false
+    # security: ### Don't want to mess up anything with Identity Center
+    #   enableIdentityCenterAccess: true
+# logging: ### Organization Trail already created by Control Tower
+#   account: LogArchive
+  # cloudtrail:
+  #   enable: false
+  #   organizationTrail: false
+  #   organizationTrailSettings:
+  #     multiRegionTrail: true
+  #     globalServiceEvents: true
+  #     managementEvents: true
+  #     s3DataEvents: true
+  #     lambdaDataEvents: true
+  #     sendToCloudWatchLogs: true
+  #     apiErrorRateInsight: false
+  #     apiCallRateInsight: false
     # accountTrails:
     #   - name: AccountTrail
     #     regions:
@@ -56,16 +59,16 @@ logging:
     #       sendToCloudWatchLogs: true
     #       apiErrorRateInsight: false
     #       apiCallRateInsight: false
-  sessionManager:
-    sendToCloudWatchLogs: false
-    sendToS3: true
-    lifecycleRules:
-      - enabled: true
-        abortIncompleteMultipartUpload: 7
-        expiration: 730
-        noncurrentVersionExpiration: 730
-    attachPolicyToIamRoles:
-      - EC2-Default-SSM-AD-Role
+  # sessionManager: ## not needed for test
+  #   sendToCloudWatchLogs: true
+  #   sendToS3: true
+  #   lifecycleRules:
+  #     - enabled: true
+  #       abortIncompleteMultipartUpload: 7
+  #       expiration: 730
+  #       noncurrentVersionExpiration: 730
+  #   attachPolicyToIamRoles:
+  #     - EC2-Default-SSM-AD-Role
   # cloudwatchLogs:
   #   dynamicPartitioning: dynamic-partitioning/log-filters.json
   #   dataProtection: 
@@ -163,9 +166,9 @@ logging:
 #           comparisonOperator: GREATER_THAN
 #           subscriptionType: EMAIL
 #           address: <budget-notifications>@example.com  <----- UPDATE EMAIL ADDRESS
-backup:
-  vaults:
-    - name: BackupVault
-      deploymentTargets:
-        organizationalUnits:
-          - Root
+# backup:
+#   vaults:
+#     - name: BackupVault
+#       deploymentTargets:
+#         organizationalUnits:
+#           - Root
