--- a/configuration/iam-config.yaml
+++ b/configuration/iam-config.yaml
@@ -1,30 +1,30 @@
 policySets: []
-roleSets:
-  - deploymentTargets:
-      organizationalUnits:
-        - Root
-    roles:
-      - name: EC2-Default-SSM-AD-Role
-        instanceProfile: true
-        assumedBy:
-          - type: service
-            principal: ec2.amazonaws.com
-        policies:
-          awsManaged:
-            - AmazonSSMManagedInstanceCore
-            - AmazonSSMDirectoryServiceAccess
-            - CloudWatchAgentServerPolicy
-      # This role is utilized by the Backup Plans defined in global-config.yaml
-      # We create this role in every account where we plan to have Backup Plans
-      # and Backup Vaults
-      - name: Backup-Role
-        assumedBy:
-          - type: service
-            principal: backup.amazonaws.com
-        policies:
-          awsManaged:
-            - service-role/AWSBackupServiceRolePolicyForBackup
-            - service-role/AWSBackupServiceRolePolicyForRestores
+roleSets: []
+  # - deploymentTargets:
+  #     organizationalUnits:
+  #       - Root
+    # roles:
+    #   - name: EC2-Default-SSM-AD-Role
+    #     instanceProfile: true
+    #     assumedBy:
+    #       - type: service
+    #         principal: ec2.amazonaws.com
+    #     policies:
+    #       awsManaged:
+    #         - AmazonSSMManagedInstanceCore
+    #         - AmazonSSMDirectoryServiceAccess
+    #         - CloudWatchAgentServerPolicy
+    #   # This role is utilized by the Backup Plans defined in global-config.yaml
+    #   # We create this role in every account where we plan to have Backup Plans
+    #   # and Backup Vaults
+    #   - name: Backup-Role
+    #     assumedBy:
+    #       - type: service
+    #         principal: backup.amazonaws.com
+    #     policies:
+    #       awsManaged:
+    #         - service-role/AWSBackupServiceRolePolicyForBackup
+    #         - service-role/AWSBackupServiceRolePolicyForRestores
       # This role is utilized by the Budgets Config defined in global-config.yaml
       # We create this role in every account where we plan to have AWS Budgets
       # A service linked role is not available for AWS Budgets
