--- a/global-config.yaml
+++ b/global-config.yaml
@@ -30,18 +30,18 @@ controlTower:
       enableIdentityCenterAccess: false
 logging: ### Organization Trail already created by Control Tower
   account: LogArchive
-  # cloudtrail:
-  #   enable: false
-  #   organizationTrail: false
-  #   organizationTrailSettings:
-  #     multiRegionTrail: true
-  #     globalServiceEvents: true
-  #     managementEvents: true
-  #     s3DataEvents: true
-  #     lambdaDataEvents: true
-  #     sendToCloudWatchLogs: true
-  #     apiErrorRateInsight: false
-  #     apiCallRateInsight: false
+  cloudtrail:
+    enable: false
+    organizationTrail: false
+    # organizationTrailSettings:
+    #   multiRegionTrail: false
+    #   globalServiceEvents: false
+    #   managementEvents: false
+    #   s3DataEvents: true
+    #   lambdaDataEvents: true
+    #   sendToCloudWatchLogs: true
+    #   apiErrorRateInsight: false
+    #   apiCallRateInsight: false
     # accountTrails:
     #   - name: AccountTrail
     #     regions:
@@ -59,17 +59,17 @@ logging: ### Organization Trail already created by Control Tower
     #       sendToCloudWatchLogs: true
     #       apiErrorRateInsight: false
     #       apiCallRateInsight: false
-  sessionManager: []
-    # sendToCloudWatchLogs: true
-    # sendToS3: true
-    # lifecycleRules:
-    #   - enabled: true
-    #     abortIncompleteMultipartUpload: 7
-    #     expiration: 730
-    #     noncurrentVersionExpiration: 730
+  sessionManager:
+    sendToCloudWatchLogs: false
+    sendToS3: false
+    lifecycleRules:
+      - enabled: false
+        abortIncompleteMultipartUpload: 7
+        expiration: 730
+        noncurrentVersionExpiration: 730
     # attachPolicyToIamRoles:
     #   - EC2-Default-SSM-AD-Role
-  cloudwatchLogs: []
+  # cloudwatchLogs:
   #   dynamicPartitioning: dynamic-partitioning/log-filters.json
   #   dataProtection: 
   #     managedDataIdentifiers:
