--- a/accounts-config.yaml
+++ b/accounts-config.yaml
@@ -13,7 +13,7 @@ mandatoryAccounts:
   - name: Audit
     description: The security audit account (also referred to as the audit account). Do not change the name field for this mandatory account. Note, the account name key does not need to match the AWS account name.
     email: aws-dbmi-lz+lzdev-security@calists.harvard.edu
-    organizationalUnit: Core
+    organizationalUnit: core
 workloadAccounts:
   # The "name" will be used to set the AWS Account name
   # The "name" value does not currently support spaces
