--- a/organization-config.yaml
+++ b/organization-config.yaml
@@ -4,7 +4,7 @@
 
 enable: true
 organizationalUnits:
-  - name: application
+  - name: applications
   - name: Infrastructure
   - name: core
   - name: galileo
