fixing required fields in security-config file

--- a/security-config.yaml
+++ b/security-config.yaml
@@ -95,7 +95,7 @@ iamPasswordPolicy:
 awsConfig:
   enableConfigurationRecorder: false
   enableDeliveryChannel: false
-#   ruleSets:
+  ruleSets: []
 #     - deploymentTargets:
 #         organizationalUnits:
 #           - Root
