--- a/organization-config.yaml
+++ b/organization-config.yaml
@@ -25,25 +25,25 @@ serviceControlPolicies:
         - applications
         - galileo
         - pic-sure
-  - name: Deny Region Block
-    description: >
-      Deny Region Block except us-east-1 and us-east-2
-    policy: service-control-policies/deny-region-block.json
-    type: customerManaged
-    deploymentTargets:
-      organizationalUnits:
-        - galileo
-  - name: Deny Region Block Additional
-    description: >
-      Deny Region Block except us-east-1, us-east-2 and us-west-2
-    policy: service-control-policies/deny-region-block-add.json
-    type: customerManaged
-    deploymentTargets:
-      organizationalUnits:
-        - Infrastructure
-        - applications
-      accounts: 
-        - lzdev-test-paul
+  # - name: Deny Region Block
+  #   description: >
+  #     Deny Region Block except us-east-1 and us-east-2
+  #   policy: service-control-policies/deny-region-block.json
+  #   type: customerManaged
+  #   deploymentTargets:
+  #     organizationalUnits:
+  #       - galileo
+  # - name: Deny Region Block Additional
+  #   description: >
+  #     Deny Region Block except us-east-1, us-east-2 and us-west-2
+  #   policy: service-control-policies/deny-region-block-add.json
+  #   type: customerManaged
+  #   deploymentTargets:
+  #     organizationalUnits:
+  #       - Infrastructure
+  #       - applications
+  #     accounts: 
+  #       - lzdev-test-paul
   - name: Block Root Access
     description: >
       Deny Root Access except for two roles for Root Access Management Service
