--- a/security-config.yaml
+++ b/security-config.yaml
@@ -26,17 +26,17 @@ centralSecurityServices:
     # excludeRegions: []
     # policyFindingsPublishingFrequency: FIFTEEN_MINUTES
     publishSensitiveDataFindings: false
-  guardduty: []
-    # enable: true
-    # excludeRegions: []
-    # s3Protection:
-    #   enable: true
-    #   excludeRegions: []
-    # exportConfiguration:
-    #   enable: true
-    #   overrideExisting: true
-    #   destinationType: S3
-    #   exportFrequency: FIFTEEN_MINUTES
+  guardduty:
+    enable: false
+    excludeRegions: []
+    s3Protection:
+      enable: false
+      excludeRegions: []
+    exportConfiguration:
+      enable: false
+      overrideExisting: false
+      destinationType: S3
+      exportFrequency: FIFTEEN_MINUTES
   auditManager:
     enable: false
   #   excludeRegions: []
