--- a/customizations-config.yaml
+++ b/customizations-config.yaml
@@ -18,18 +18,21 @@ customizations:
         - us-east-2
       deploymentTargets:
         organizationalUnits:
-          - Root
+          - applications
+          - galileo
+          - pic-sure
+          - Security
       runOrder: 1
       template: ./cfn-templates/config-rules.yml
       terminationProtection: true
-    - name: LZA-AWS-Config-Global-Rules
-      description: Enables Additional AWS Config Rules
-      regions:
-        - us-east-1
-        - us-east-2
-      deploymentTargets:
-        organizationalUnits:
-          - Root
+    # - name: LZA-AWS-Config-Global-Rules
+    #   description: Enables Additional AWS Config Rules
+    #   regions:
+    #     - us-east-1
+    #     - us-east-2
+    #   deploymentTargets:
+    #     organizationalUnits:
+    #       - Root
       runOrder: 2
       template: ./cfn-templates/config-rules-global.yml
       terminationProtection: true
